# file-viewer2

./: Cargo.toml  MIGRATION_PLAN.md  README.md
crates/app/: Cargo.toml
crates/app/src/: app.rs  highlight.rs  main.rs  settings.rs  themes.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/slint-app/: Cargo.toml  build.rs
crates/slint-app/src/: main.rs
crates/slint-app/ui/: mainwindow.slint
